--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,5 +53,6 @@
     <string name="camera_cancel">取消</string>
     <string name="no_photo">相册没有图片</string>
     
+      <string name="add_tag">Add Tag</string>
 
 </resources>
